Implement reader for SRTM .hgt DEM files